Added boxes for the image, adjusted spacing to align items in row with subtext underneath hero text.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
+
 .hero {
   background-color: #1f2937;
   display: flex 1;
@@ -8,4 +16,43 @@
   font-size: 24px;
   display: flex;
   font-weight: 700;
+}
+
+.headlinks {
+  font-size: 18px;
+  color:#E5E7EB;
+  display: flex;
+  justify-content: space-between;
+  margin: 0 8PX;
+  position: relative;
+  left: 78%;
+}
+
+ul {
+  font-size: 18px;
+  color: #E5E7EB;
+  list-style: none;
+  margin: auto;
+  padding: 0;
+  gap: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.herocontent {
+  font-size: 48px;
+  font-weight: 1000;
+  color: #f9faf8;
+  display: flex;
+  margin-top: 200px;
+}
+
+.herosub{
+  font-size: 18px;
+  color:#E5E7EB;
+  display: flex;
+  margin-top: 24px;
 }
