--- a/style.css
+++ b/style.css
@@ -3,38 +3,41 @@ body {
   flex-direction: column;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
-.hero {
+.hero,
+.header
+ {
   background-color: #1f2937;
-  display: flex 1;
-}
+ }
 
 .header {
   color: #f9faf8;
   font-size: 24px;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   font-weight: 700;
+  padding: 32px;
 }
 
-.headlinks {
+#headlinks {
   font-size: 18px;
   color:#E5E7EB;
   display: flex;
-  justify-content: space-between;
-  margin: 0 8PX;
-  position: relative;
-  left: 78%;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: flex-start;
+  margin-top: 0;
 }
 
 ul {
   font-size: 18px;
   color: #E5E7EB;
   list-style: none;
-  margin: auto;
   padding: 0;
-  gap: 16px;
+  gap: 32px;
+  margin-right: 2px;
 }
 
 a {
@@ -47,12 +50,155 @@ a {
   font-weight: 1000;
   color: #f9faf8;
   display: flex;
-  margin-top: 200px;
+  margin-top: 100px;
+  margin-bottom: 0;
+  flex-direction: column;
+  align-content: space-between;
+  padding: 32px;
+  flex-shrink: 1;
+  margin-right: 0;
+  flex-basis: auto;
 }
 
-.herosub{
+#herosub{
   font-size: 18px;
   color:#E5E7EB;
+  width: 400px;
+  padding: 8px;
+}
+
+img {
+  width: 300px;
+  align-self: flex-start;
+  height: auto;
+}
+
+.imgcontainer {
+max-width: 300px;
+margin-left: auto;
+position: relative;
+margin-top: 100px;
+padding: 16px 72px;
+align-items: flex-start
+}
+
+.hero {
   display: flex;
-  margin-top: 24px;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.info {
+  font-size: 36px;
+  font-weight: 1000;
+  color: #1f2937;
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+
+}
+
+button {
+  background-color: #3882f6;
+  border: none;
+  color: white;
+  padding: 15px 30px;
+  text-align: center;
+  font-size: 16px;
+  display: inline-block;
+  width: 150px;
+  border-radius: 15px;
+  
+}
+
+.infopics {
+  justify-content: space-around;
+  display: flex;
+  align-content: center;
+  margin: 100px 200px;
+  gap: 32px;
+  flex-wrap: wrap;
+}
+
+.infoimg {
+  width: 200px;
+  height: 200px;
+  float: left;
+  object-fit: cover;
+}
+
+figure {
+  float: right;
+  text-align: center;
+  font-size: 18px;
+  color: #1f2937;
+}
+
+.figure img {
+  width: 100%;
+  height: auto;
+}
+
+figcaption {
+  text-align: center;
+  flex-wrap: wrap;
+  position: relative;
+  width: 200px;
+}
+
+.quote {
+  background-color: #E5E7EB;
+  font-style: italic;
+  font-size: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 100px 200px;
+
+}
+
+.credit{
+  background-color: #E5E7EB;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 700;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 24px;
+  padding-right: 400px;
+}
+
+.action {
+  display: flex;
+  background-color: #3882f6;
+  font-size: 24px;
+  font-weight: 700;
+  color: #E5E7EB;
+  margin: 200px;
+  border-radius: 15px;
+  padding: 48px 72px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.button2 {
+  border: 2px solid white;
+  text-decoration: solid;
+  text-decoration-color: #E5E7EB;
+  width: 200px;
+  height: 50px;
+}
+
+.buttoncontainer {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0;
+  width: auto;
+}
+
+.actiontext {
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  justify-content: center;
+  width: min-content;
 }
